--- a/app/src/main/res/layout/list_element.xml
+++ b/app/src/main/res/layout/list_element.xml
@@ -38,14 +38,27 @@
         tools:text="500,00" />
 
     <ImageButton
-        android:id="@+id/bt_edit_list_element"
+        android:id="@+id/bt_delete_list_element"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_list_element_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/bt_edit_list_element"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bt_edit_list_element"
+        app:srcCompat="@android:drawable/ic_menu_delete"
+        android:visibility="invisible"/>
+
+    <ImageButton
+        android:id="@+id/bt_edit_list_element"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_list_element_icon"
+        app:layout_constraintEnd_toStartOf="@+id/bt_delete_list_element"
         app:layout_constraintTop_toTopOf="@+id/iv_list_element_icon"
-        app:srcCompat="@android:drawable/ic_menu_edit" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@android:drawable/ic_menu_edit"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/tv_type"
@@ -78,4 +91,15 @@
         android:text="@string/value_local_money"
         app:layout_constraintStart_toStartOf="@+id/tv_type"
         app:layout_constraintTop_toBottomOf="@+id/tv_type" />
+
+    <TextView
+        android:id="@+id/tv_id_cash_flow_entry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ID"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_list_element_icon"
+        app:layout_constraintEnd_toStartOf="@+id/bt_edit_list_element"
+        app:layout_constraintStart_toEndOf="@+id/tv_details"
+        app:layout_constraintTop_toTopOf="@+id/iv_list_element_icon" />
 </androidx.constraintlayout.widget.ConstraintLayout>
